--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
 <body>
 <center><h1>Главная Страница</h1></center>
 <br/><br/>
-<a href="page2.html">1</a>
-<a href="page3.html">2</a>
-<a href="page4.html">3</a>
-<br/><br/>
-<font style="color:green">Этот текст зеленый</font>
+<font style="color:green">Хочешь аНиМе???</font>
 <br/><br/>
 <b>Просто пример жирного текста</b>
 </body>
