--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
 <body>
 <center><h1>Главная Страница</h1></center>
 <br/><br/>
+<script>
+function getRandomInt(max) {
+  return Math.floor(Math.random() * max);
+}
+
+console.log(getRandomInt(3));
+// expected output: 0, 1 or 2
+
+console.log(getRandomInt(1));
+// expected output: 0
+
+console.log(Math.random());
+// expected output: a number from 0 to <1
+<script/>
+<br/><br/>
 <font style="color:green">Хочешь аНиМе???</font>
 <br/><br/>
 <b>Просто пример жирного текста</b>
