--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ console.log(getRandomInt(1));
 
 console.log(Math.random());
 // expected output: a number from 0 to <1
-<script/>
+</script>
 <br/><br/>
 <font style="color:green">Хочешь аНиМе???</font>
 <br/><br/>
