--- a/index.html
+++ b/index.html
@@ -5,13 +5,7 @@
 <body>
 <center><h1>Главная Страница</h1></center>
 <br/><br/>
-<script>
-    function getRandomInt(max) {
-      document.getElementById("myNumber").innerHTML = Math.floor(Math.random() * max);
-    }
-</script>
-<br/><br/>
-<a style="color:green" id="myNumber" onload="getRandomInt(50);"></a>
+<script srs="gettext.js"></script>
 <br/><br/>
 <b>Просто пример жирного текста</b>
 </body>
