--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
 <center><h1>Главная Страница</h1></center>
 <br/><br/>
 <script>
+    int a = 52
     var inBody = function(){            // Создаём анонимную функцию. Помещаем её в переменную "inBody"
-       var xhr = new XMLHttpRequest()  // Создаём локальную переменную XHR, которая будет объектом XMLHttpRequest
-       xhr.open('GET', 'text.html')     // Задаём метод запроса и URL  запроса
        xhr.onload = function(){        // Используем обработчик событий onload, чтобы поймать ответ сервера XMLHttpRequest
-          console.log(xhr.response)           // Выводим в консоль содержимое ответа сервера. Это строка!
-          document.body.innerHTML = xhr.response  // Содержимое ответа, помещаем внутрь элемент "body" 
+          document.body.innerHTML = a  // Содержимое ответа, помещаем внутрь элемент "body" 
        }
        xhr.send()  // Инициирует запрос. Посылаем запрос на сервер.
     }
