--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <center><h1>Главная Страница</h1></center>
 <br/><br/>
 <script>
-    int a = 52;
+    let a = 52;
     var inBody = function(){            // Создаём анонимную функцию. Помещаем её в переменную "inBody"
        xhr.onload = function(){        // Используем обработчик событий onload, чтобы поймать ответ сервера XMLHttpRequest
           document.body.innerHTML = a  // Содержимое ответа, помещаем внутрь элемент "body" 
