--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <br/><br/>
 <script>
     let a = 52;
-    document.body.innerHTML = a;
+    document.body.innerHTML += a;
 </script>
 <br/><br/>
 <b>Просто пример жирного текста</b>
