--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <script>
     let a = 52;
     document.body.innerHTML += a;
+    function showMessage() {
+        a-=1;
+    }
 </script>
 <br/><br/>
 <b>Просто пример жирного текста</b>
