--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 <br/><br/>
 <script>
     let a = 52;
-    document.body.a.innerHTML += a;
+    document.body.aText.innerHTML += a;
     function showMessage() {
         a-=1;
     }
 </script>
-<a></a>
+<aText></aText>
 <br/><br/>
 <b>Просто пример жирного текста</b>
 </body>
