--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <br/><br/>
 <script>
     let a = 52;
-    document.body.aText.innerHTML += a;
+    document.body.aText += a;
     function showMessage() {
         a-=1;
     }
