--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
 <body>
 <center><h1>Главная Страница</h1></center>
 <br/><br/>
+<a id="a1">Просто пример жирного текста</a>
 <script>
     let a = 52;
-    document.body.aText += a;
-    function showMessage() {
+    document.getElementById("a1").innerHTML = a;
+    function Minus() {
         a-=1;
+        document.getElementById("a1").innerHTML += a;
     }
 </script>
-<aText></aText>
 <br/><br/>
-<b>Просто пример жирного текста</b>
 </body>
 </html>
