--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     document.getElementById("a1").innerHTML = a;
     function Minus() {
         a-=1;
-        document.getElementById("a1").innerHTML += a;
+        document.getElementById("a1").innerHTML = a;
     }
 </script>
 <br/><br/>
