--- a/index.html
+++ b/index.html
@@ -3,17 +3,21 @@
 	<title>Главная страница</title>
 </head>
 <body>
-<center><h1>Главная Страница</h1></center>
-<br/><br/>
-<a id="a1">Просто пример жирного текста</a>
-<script>
-    let a = 52;
-    document.getElementById("a1").innerHTML = a;
-    function Minus() {
-        a-=1;
+    <center><h1>Главная Страница</h1></center>
+    <br/><br/>
+    <a id="a1">Просто пример жирного текста</a>
+    <script>
+        let a = 52;
         document.getElementById("a1").innerHTML = a;
-    }
-</script>
-<br/><br/>
+        function Minus() {
+            a-=1;
+            document.getElementById("a1").innerHTML = a;
+        }
+    </script>
+    <br/><br/>
+    <p>
+    <input type="button" value=" Нажми меня нежно ">
+    </p>
+    <br/><br/>
 </body>
 </html>
