--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </script>
     <br/><br/>
     <p>
-    <input type="button" value=" Нажми меня нежно ">
+    <input type="button" value="Нажми меня нежно" onClick="Minus()">
     </p>
     <br/><br/>
 </body>
