--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 <body>
     <center><h1>Главная Страница</h1></center>
     <br/><br/>
-    <a id="a1">Просто пример жирного текста</a>
+        <center>
+            <a id="a1"></a>
+        </center>
     <script>
         let a = 52;
         document.getElementById("a1").innerHTML = a;
@@ -15,9 +17,11 @@
         }
     </script>
     <br/><br/>
-    <p>
-    <input type="button" value="Нажми меня нежно" onClick="Minus()">
-    </p>
+        <p>
+            <center>
+                <input type="button" value="Нажми меня нежно" onClick="Minus()">
+            </center>
+        </p>
     <br/><br/>
 </body>
 </html>
