--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
             <a id="a1"></a>
         </center>
     <script>
-        let a = 52;
+        var xmlhttp = getXmlHttp();
+        xmlhttp.open('GET', 'file.txt', false);
+        xmlhttp.send(null);
+        var a = xmlhttp.responseText;
         document.getElementById("a1").innerHTML = a;
         function Minus() {
             a-=1;
