--- a/index.html
+++ b/index.html
@@ -9,10 +9,26 @@
             <a id="a1"></a>
         </center>
     <script>
-        var xmlhttp = getXmlHttp();
-        xmlhttp.open('GET', 'file.txt', false);
-        xmlhttp.send(null);
-        var a = xmlhttp.responseText;
+        function readTextFile(file)
+        {
+            var rawFile = new XMLHttpRequest();
+            rawFile.open("GET", file, false);
+            rawFile.onreadystatechange = function ()
+            {
+                if(rawFile.readyState === 4)
+                {
+                    if(rawFile.status === 200 || rawFile.status == 0)
+                    {
+                        var allText = rawFile.responseText;
+                        alert(allText);
+                        return allText;
+                    }
+                }
+            }
+            rawFile.send(null);
+        }
+        
+        var a = readTextFile("text.txt");
         document.getElementById("a1").innerHTML = a;
         function Minus() {
             a-=1;
