--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
             rawFile.send(null);
         }
         
-        document.getElementById("a1").innerHTML = readTextFile("text.txt");
+        var a = 0;
+        //document.getElementById("a1").innerHTML = a;
         function Minus() {
             a-=1;
             document.getElementById("a1").innerHTML = a;
