--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             console.log(a);
             a-=1;
             document.getElementById("a1").innerHTML = a;
-            var fs = require("fs");
-            fs.writeFileSync("text.txt", a,  "ascii");
+            //var fs = require("fs");
+            //fs.writeFileSync("text.txt", a,  "ascii");
         }
     </script>
     <br/><br/>
