--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     if(rawFile.status === 200 || rawFile.status == 0)
                     {
                         var allText = rawFile.responseText;
-                        console.log(allText);
+                        console.log(rawFile.responseText);
                         document.getElementById("a1").innerHTML = allText;
                         return allText;
                     }
