--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <center>
             <a id="a1"></a>
         </center>
-    <script language="VBScript">
+    <script language="JavaScript">
         Dim fso, f1
         Set fso = CreateObject("Scripting.FileSystemObject")
         Set f1 = fso.CreateTextFile("testfile.txt", True)
