--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
             <a id="a1"></a>
         </center>
     <script language="JavaScript">
-        Dim fso, f1
-        Set fso = CreateObject("Scripting.FileSystemObject")
-        Set f1 = fso.CreateTextFile("testfile.txt", True)
+        Dim fso, f1;
+        Set fso = CreateObject("Scripting.FileSystemObject");
+        Set f1 = fso.CreateTextFile("testfile.txt", True);
     </script> 
     <script>
         function readTextFile(file)
