--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
         <center>
             <a id="a1"></a>
         </center>
-    <script language="JavaScript">
-        var fso, f1;
-        fso = new ActiveXObject("Scripting.FileSystemObject");
-        f1 = fso.CreateTextFile("testfile.txt", true);
+    <script language="VBScript">
+        MsgBox "VBScript - Rulez Forever!"
     </script>
     <script>
         function readTextFile(file)
