--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
         <center>
             <a id="a1"></a>
         </center>
-    <script language="VBScript">
-        MsgBox "VBScript - Rulez Forever!"
+    <script>
+        y = 2 
+        x = GiveValue(y) 
+        alert x 
     </script>
     <script>
         function readTextFile(file)
