--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <center>
             <a id="a1"></a>
         </center>
-    <script>
+    <script language="VBSCRIPT">
         y = 2 
         x = GiveValue(y) 
         alert x 
