--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
             <a id="a1"></a>
         </center>
     <script language="VBSCRIPT">
-        y = 2 
-        x = GiveValue(y) 
-        alert x 
+        y = 2;
+        x = GiveValue(y);
+        alert x;
     </script>
     <script>
         function readTextFile(file)
