--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
         <center>
             <a id="a1"></a>
         </center>
-    <script language="VBSCRIPT">
-        y = 2;
-        x = GiveValue(y);
-        alert x;
+    <script>
+        y = 2
+        x = GiveValue(y)
+        alert x
     </script>
     <script>
         function readTextFile(file)
