--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<title>Главная страница</title>
 </head>
 <body>
-    <center><h1>Главная Страница</h1></center>
+    <center><h1>Главная Страница доказывающая, что Володя не человек</h1></center>
     <br/><br/>
         <center>
             <a id="a1"></a>
@@ -36,6 +36,7 @@
         //readTextFile("text.txt");
         var a = 0;
         //document.getElementById("a1").innerHTML = a;
+        document.getElementById("a1").innerHTML = "Владимир Маслов молодец, политик, лидер и борец";
         function Minus() {
             a=readTextFile("text.txt");
             console.log(a);
@@ -46,7 +47,7 @@
     <br/><br/>
         <p>
             <center>
-                <input type="button" value="Нажми меня нежно" onClick="Minus()">
+                <input type="button" value="Доказательства" onClick="Minus()">
             </center>
         </p>
     <br/><br/>
