--- a/index.html
+++ b/index.html
@@ -36,12 +36,13 @@
         //readTextFile("text.txt");
         var a = 0;
         //document.getElementById("a1").innerHTML = a;
-        document.getElementById("a1").innerHTML = "Владимир Маслов молодец, политик, лидер и борец";
+        
         function Minus() {
-            a=readTextFile("text.txt");
-            console.log(a);
-            a-=1;
-            document.getElementById("a1").innerHTML = a;
+            //a=readTextFile("text.txt");
+            //console.log(a);
+            //a-=1;
+            //document.getElementById("a1").innerHTML = a;
+            document.getElementById("a1").innerHTML = "Владимир Маслов молодец, политик, лидер и борец";
         }
     </script>
     <br/><br/>
