--- a/index.html
+++ b/index.html
@@ -1,56 +1,78 @@
-<html>
-<head>
-	<title>Главная страница</title>
-</head>
-<body>
-    <center><h1>Главная Страница доказывающая, что Володя не человек</h1></center>
-    <br/><br/>
-        <center>
-            <a id="a1"></a>
-        </center>
+<!DOCTYPE html>
+<html lang="en-us">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Unity WebGL Player | Island</title>
+    <link rel="shortcut icon" href="TemplateData/favicon.ico">
+    <link rel="stylesheet" href="TemplateData/style.css">
+  </head>
+  <body>
+    <div id="unity-container" class="unity-desktop">
+      <canvas id="unity-canvas"></canvas>
+      <div id="unity-loading-bar">
+        <div id="unity-logo"></div>
+        <div id="unity-progress-bar-empty">
+          <div id="unity-progress-bar-full"></div>
+        </div>
+      </div>
+      <div id="unity-mobile-warning">
+        WebGL builds are not supported on mobile devices.
+      </div>
+      <div id="unity-footer">
+        <div id="unity-webgl-logo"></div>
+        <div id="unity-fullscreen-button"></div>
+        <div id="unity-build-title">Island</div>
+      </div>
+    </div>
     <script>
-        y = 2
-        x = GiveValue(y)
-        alert x
+      var buildUrl = "Build";
+      var loaderUrl = buildUrl + "/Islands.loader.js";
+      var config = {
+        dataUrl: buildUrl + "/Islands.data.gz",
+        frameworkUrl: buildUrl + "/Islands.framework.js.gz",
+        codeUrl: buildUrl + "/Islands.wasm.gz",
+        streamingAssetsUrl: "StreamingAssets",
+        companyName: "DefaultCompany",
+        productName: "Island",
+        productVersion: "0.1",
+      };
+
+      var container = document.querySelector("#unity-container");
+      var canvas = document.querySelector("#unity-canvas");
+      var loadingBar = document.querySelector("#unity-loading-bar");
+      var progressBarFull = document.querySelector("#unity-progress-bar-full");
+      var fullscreenButton = document.querySelector("#unity-fullscreen-button");
+      var mobileWarning = document.querySelector("#unity-mobile-warning");
+
+      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
+        container.className = "unity-mobile";
+        config.devicePixelRatio = 1;
+        mobileWarning.style.display = "block";
+        setTimeout(() => {
+          mobileWarning.style.display = "none";
+        }, 5000);
+      } else {
+        canvas.style.width = "960px";
+        canvas.style.height = "600px";
+      }
+      loadingBar.style.display = "block";
+
+      var script = document.createElement("script");
+      script.src = loaderUrl;
+      script.onload = () => {
+        createUnityInstance(canvas, config, (progress) => {
+          progressBarFull.style.width = 100 * progress + "%";
+        }).then((unityInstance) => {
+          loadingBar.style.display = "none";
+          fullscreenButton.onclick = () => {
+            unityInstance.SetFullscreen(1);
+          };
+        }).catch((message) => {
+          alert(message);
+        });
+      };
+      document.body.appendChild(script);
     </script>
-    <script>
-        function readTextFile(file)
-        {
-            var rawFile = new XMLHttpRequest();
-            rawFile.open("GET", file, false);
-            rawFile.onreadystatechange = function ()
-            {
-                if(rawFile.readyState === 4)
-                {
-                    if(rawFile.status === 200 || rawFile.status == 0)
-                    {
-                        var allText = rawFile.responseText;
-                        alert(allText);
-                        document.getElementById("a1").innerHTML = allText;
-                        return allText;
-                    }
-                }
-            }
-            rawFile.send(null);
-        }
-        //readTextFile("text.txt");
-        var a = 0;
-        //document.getElementById("a1").innerHTML = a;
-        
-        function Minus() {
-            //a=readTextFile("text.txt");
-            //console.log(a);
-            //a-=1;
-            //document.getElementById("a1").innerHTML = a;
-            document.getElementById("a1").innerHTML = "Владимир Маслов молодец, политик, лидер и борец";
-        }
-    </script>
-    <br/><br/>
-        <p>
-            <center>
-                <input type="button" value="Доказательства" onClick="Minus()">
-            </center>
-        </p>
-    <br/><br/>
-</body>
+  </body>
 </html>
