--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 requestAnimationFrame( animate );
                 renderer.render( scene, camera );
                 
-                cube.rotation.x += 1;
+                cube.rotation.y += 0.1;
                 
             }
             animate();
