--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 renderer.render( scene, camera );
                 
                 cube.rotation.y += 0.01;
+                cube.rotation.x += 0.01;
                 
             }
             animate();
