--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 cube.rotation.y += 0.01;
                 cube.rotation.x += 0.01;
                 
+                camera.position.y -= 0.01;
             }
             animate();
             
