--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 cube.rotation.y += 0.01;
                 cube.rotation.x += 0.01;
                 
-                camera.position.y -= 0.01;
+                camera.position.x -= 0.01;
             }
             animate();
             
