--- a/index.html
+++ b/index.html
@@ -34,10 +34,14 @@
                 cube.rotation.y += 0.01;
                 cube.rotation.x += 0.01;
                 
-                if (camera.position.x > -2.8):
+                if (camera.position.x > -2.8)
+                {
                     camera.position.x -= 0.01;
-                else:
+                {
+                else
+                {
                     camera.position.x += 0.01;
+                }
                 
                 console.log(camera.position.x);
             }
