--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 //    camera.position.x += 0.01;
                 //}
                 
-                console.log(camera.position.x);
+                //console.log(camera.position.x);
             }
             animate();
             
