--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
 	<body>
 		<script>
             game.init();
-            
             game.addCube({
                 'position' : game.v(0,0,0)
             });
             
-            game.camera.position.z = 5
+            game.getCamera().position.z = 5
 		</script>
 	</body>
 </html>
