--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
                 'position' : game.v(0,0,0)
             });
             
+            game.addCube({
+                'position' : game.v(2,0,0)
+            });
+            
             game.getCamera().position.z = 5
 		</script>
 	</body>
