--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 
 			const animate = function () {
 				requestAnimationFrame( animate );
-                on('keydown', (keys) => {
+                addEventListener("keydown", function(event) {
+                  if (event.keyCode == 68)
                     cube.rotation.x += 0.01;
                 });
-				//cube.rotation.y += 0.01;
 
 				renderer.render( scene, camera );
 			};
