--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				requestAnimationFrame( animate );
                 addEventListener("keydown", function(event) {
                   if (event.keyCode == 68)
-                    cube.rotation.x += 0.01;
+                    cube.rotation.y += 0.01;
                 });
 
 				renderer.render( scene, camera );
