--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 			const animate = function () {
 				requestAnimationFrame( animate );
-                addEventListener("keydown", function(event) {
+                addEventListener("keyup", function(event) {
                   if (event.keyCode == 68)
                     cube.rotation.y += 0.01;
                 });
