--- a/index.html
+++ b/index.html
@@ -17,16 +17,20 @@
 			const scene = new THREE.Scene();
 			const camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
 
-			const renderer = new THREE.WebGLRenderer();
+			var renderer = renderer = new THREE.WebGLRenderer({
+                antialias: true;
+            });
 			renderer.setSize( window.innerWidth, window.innerHeight );
-			document.body.appendChild( renderer.domElement );
-
+			document.body.appendChild( renderer.domElement 
+            
+            var controls = new THREE.OrbitControls(camera, renderer.domElement);
+            controls.maxPolarAngle = Math.PI / 2;
+            
 			const geometry = new THREE.BoxGeometry();
 			const material = new THREE.MeshBasicMaterial( { color: '#6495ED' } );
 			const cube = new THREE.Mesh( geometry, material );
 			scene.add( cube );
 
-            var controls = new THREE.OrbitControls(camera, renderer.domElement);
 			camera.position.z = 5;
 
 			const animate = function () {
