--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
 			const scene = new THREE.Scene();
 			const camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
 
-			var renderer = renderer = new THREE.WebGLRenderer({
-                antialias: true;
-            });
+			var renderer = renderer = new THREE.WebGLRenderer();
 			renderer.setSize( window.innerWidth, window.innerHeight );
 			document.body.appendChild( renderer.domElement 
             
