--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 			var renderer = renderer = new THREE.WebGLRenderer();
 			renderer.setSize( window.innerWidth, window.innerHeight );
-			document.body.appendChild( renderer.domElement 
+			document.body.appendChild( renderer.domElement );
             
             var controls = new THREE.OrbitControls(camera, renderer.domElement);
             controls.maxPolarAngle = Math.PI / 2;
