--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	</head>
 	<body>
 		<script src="js/three.js"></script>
+		<script src="js/OrbitControls.js"></script>
 		<script>
             var clock = new THREE.Clock();
             var angularSpeed = THREE.Math.degToRad(20);
