--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 	</head>
 	<body>
 		<script src="js/three.js"></script>
-		<script src="js/OrbitControls.js"></script>
 		<script>
+            import { OrbitControls } from "https://deadanddiefox.github.io/js/OrbitControls.js";
+        
             var clock = new THREE.Clock();
             var angularSpeed = THREE.Math.degToRad(20);
             var delta = 0;
