--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<script src="js/three.js"></script>
 		<script>
-            import { OrbitControls } from "https://deadanddiefox.github.io/js/OrbitControls.js";
+            import { OrbitControls } from "https://threejs.org/examples/jsm/controls/OrbitControls.js";
         
             var clock = new THREE.Clock();
             var angularSpeed = THREE.Math.degToRad(20);
