--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 			body { margin: 0; }
 		</style>
 		<script src="js/three.js"></script>
+		<script src="js/three.module.js"></script>
 		<script src="js/OrbitControls.js"></script>
 	</head>
 	<body>
