--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	</head>
 	<body>
 		<script type="module">
-            import * as THREE from "js/three.module.js";
-            import {OrbitControls} from "js/OrbitControls.js";
+            import * as THREE from "./js/three.module.js";
+            import {OrbitControls} from "./js/OrbitControls.js";
             var clock = new THREE.Clock();
             var angularSpeed = THREE.Math.degToRad(20);
             var delta = 0;
