--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 		<style>
 			body { margin: 0; }
 		</style>
+        <script src="js/three.js"></script><!--r83-->
 	</head>
 	<body>
 		<script type="module">
-            import * as THREE from "https://deadanddiefox.github.io/js/three.module.js";
-            import {OrbitControls} from "https://deadanddiefox.github.io/js/OrbitControls.js";
+            import {OrbitControls} from './js/OrbitControls.js';
             var clock = new THREE.Clock();
             var angularSpeed = THREE.Math.degToRad(20);
             var delta = 0;
