--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<style>
 			body { margin: 0; }
 		</style>
-        <script src="js/three.js"></script><!--r83-->
+        <script src="js/three.js"></script>
 	</head>
 	<body>
 		<script type="module">
