--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<script type="module">
-            import {OrbitControls} from './js/OrbitControls.js';
+            import {OrbitControls} from './js/OrbitControls.js'; //
             var clock = new THREE.Clock();
             var angularSpeed = THREE.Math.degToRad(20);
             var delta = 0;
