--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<script type="module">
-            //import {OrbitControls} from './js/OrbitControls.js'; //
+            import { OrbitControls } from "./js/examples/jsm/controls/OrbitControls.js";
             var clock = new THREE.Clock();
             var angularSpeed = THREE.Math.degToRad(20);
             var delta = 0;
@@ -21,7 +21,7 @@
 			renderer.setSize( window.innerWidth, window.innerHeight );
 			document.body.appendChild( renderer.domElement );
             
-            var controls = new THREE.OrbitControls(camera, renderer.domElement);
+            var controls = new OrbitControls( camera, renderer.domElement );
             controls.maxPolarAngle = Math.PI / 2;
             
 			const geometry = new THREE.BoxGeometry();
