--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
         </script>
 	</head>
 	<body>
-        <a><font color="red">Я твою маму ебал</font></a>
 		<script type="module">
             import * as THREE from "https://deadanddiefox.github.io/js/three.module.js"; 
             import { OrbitControls } from "https://deadanddiefox.github.io/js/OrbitControls.js"; 
@@ -68,5 +67,6 @@
 
 			animate();
 		</script>
+        <center><a><font color="red">Я твою маму ебал</font></a></center>
 	</body>
 </html>
