--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
 <html>
 	<head>
-		<meta charset="utf-8">
-		<title>My first three.js app</title>
-		<style>
-			body { margin: 0; }
-		</style><!-- CSS only -->
+		<meta charset="UTF-8">
+		<title>Антон Соболев</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link rel="icon" type="image/png" href="/assets/images/favicon.png?v=07824d33e2">
+        <link href="styles.css" rel="stylesheet">
 	</head>
 	<body>
+        <div class="container">
+            <div class="row justify-content-md-center top-pad">
+                <div class="col col-lg-5 p-3 mb-2 bg-dark text-white">
+                    <h3 class="gx-5">Антон Соболев</h3>
+                </div>
+                <div class="col col-lg-5">
+                    <h6 class="gx-5">Технические Навыки</h6>
+                    <hr>
+                    
+                    <p>Хуй манда жопа пизда</p>
+                </div>
+            </div>
+        </div>
+        
         <!-- JavaScript Bundle with Popper -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 	</body>
