--- a/index.html
+++ b/index.html
@@ -8,15 +8,19 @@
 	</head>
 	<body>
         <div class="container">
-            <div class="row justify-content-md-center top-pad">
-                <div class="col col-lg-5 p-3 mb-2 bg-dark text-white">
-                    <h3 class="gx-5">Антон Соболев</h3>
+            <div class="row justify-content-md-center">
+                <div class="col col-lg-5 p-3 mb-2 bg-gray text-white">
+                    <h3 class="gx-5 txt-gray">Антон Соболев</h3>
                 </div>
                 <div class="col col-lg-5">
-                    <h6 class="gx-5">Технические Навыки</h6>
+                    <h6 class="gx-5 txt-gray">Технические Навыки</h6>
                     <hr>
                     
-                    <p>Хуй манда жопа пизда</p>
+                    <p>Основные языки: Python, JS</p>
+                    <p>Фрэймворки: Django</p>
+                    <p>Контроль Версий: Git</p>
+                    <p>Базы Данных: SQLite3, PostgreSQL</p>
+                    <p>Интрументы: ORM, HTML, CSS</p>
                 </div>
             </div>
         </div>
