--- a/eng.html
+++ b/eng.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Антон Соболев</title>
+		<title>Anton Sobolev</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="icon" type="image/png" href="/assets/images/favicon.png?v=07824d33e2">
         <link href="styles.css" rel="stylesheet">
@@ -11,7 +11,7 @@
             <div class="row">
                 <div class="col p-3 mb-2 bg-gray">
                     <br/>
-                    <p class="txt-gray">Антон Соболев<sup class="sup-thin link link_unstyled"><a href="/eng">EN</a></sup></p>
+                    <p class="txt-gray">Антон Соболев<sup class="sup-thin link link_unstyled"><a href="/eng.html">EN</a></sup></p>
                     
                     <br/>
                     <br/>
