--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <div class="row">
                 <div class="col p-3 mb-2 bg-gray">
                     <br/>
-                    <p class="txt-gray">Антон Соболев<sup class="sup-thin link link_unstyled"><a href="/eng">EN</a></sup></p>
+                    <p class="txt-gray">Антон Соболев<sup class="sup-thin link link_unstyled"><a href="https://deadanddiefox.github.io/eng">EN</a></sup></p>
                     
                     <br/>
                     <br/>
