--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
             <div class="row">
                 <div class="col p-3 mb-2 bg-gray">
                     <br/>
-                    <p class="txt-gray">Антон Соболев<sup class="sup-thin link link_unstyled"><a href="https://deadanddiefox.github.io/eng">EN</a></sup></p>
+                    <p class="txt-gray txt-big">Антон Соболев<sup class="sup-thin"><a href="https://deadanddiefox.github.io/eng" class="sup-decor">EN</a></sup></p>
                     
-                    <br/>
                     <br/>
                     
                     <p class="text-bold-extra">Контакты</p>
