--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
         <div class="container">
             <div class="row">
-                <div class="col p-3 mb-2 bg-gray">
+                <div class="col p-3 bg-gray">
                     <br/>
                     <p class="txt-gray txt-big">Антон Соболев<sup class="sup-thin"><a href="https://deadanddiefox.github.io/eng" class="sup-decor">EN</a></sup></p>
                     
