--- a/eng.html
+++ b/eng.html
@@ -53,7 +53,7 @@
                     <br/>English — B1</p>
                     <br/>
                     
-                    <h6 class="gx-5 txt-gray text-bold-extra">Проекты</h6>
+                    <h6 class="gx-5 txt-gray text-bold-extra">Projects</h6>
                     <hr class="line-black">
                     <br/>
                     
