--- a/eng.html
+++ b/eng.html
@@ -40,7 +40,7 @@
                         <li>Frameworks: Django;</li>
                         <li>Version Control: Git;</li>
                         <li>Databases: SQLite3, PostgreSQL;</li>
-                        <li>Tools: ORM, HTML, CSS;</p></li>
+                        <li>Tools: ORM, API, REST, HTML, CSS;</p></li>
                     </ul>
                     <br/>
                     <br/>
