--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <li>Фрэймворки: Django;</li>
                         <li>Контроль Версий: Git;</li>
                         <li>Базы Данных: SQLite3, PostgreSQL;</li>
-                        <li>Интрументы: ORM, HTML, CSS;</p></li>
+                        <li>Интрументы: ORM, API, REST, HTML, CSS;</p></li>
                     </ul>
                     <br/>
                     <br/>
