--- a/eng.html
+++ b/eng.html
@@ -11,7 +11,7 @@
             <div class="row">
                 <div class="col p-3 mb-2 bg-gray">
                     <br/>
-                    <p class="txt-gray txt-big">Anton Sobolev<sup class="sup-thin"><a href="https://deadanddiefox.github.io" class="sup-decor">EN</a></sup></p>
+                    <p class="txt-gray txt-big">Anton Sobolev<sup class="sup-thin"><a href="https://deadanddiefox.github.io" class="sup-decor">RU</a></sup></p>
                     
                     <br/>
                     
