--- a/eng.html
+++ b/eng.html
@@ -3,7 +3,7 @@
 		<meta charset="UTF-8">
 		<title>Anton Sobolev</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <link rel="icon" type="image/png" href="/assets/images/favicon.png">
+        <link rel="icon" type="image/png" href="assets/images/favicon.png">
         <link href="assets/css/styles.css" rel="stylesheet">
 	</head>
 	<body>
