--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <br/>
                     
                     <p>Прототип Социальной Сети</p>
-                    <p class="txt-small">Небольшой сайт с возможностью регистрации, публикации контента, выставлением никнеймов, чтением глобальной ленты, а так же имеет в себе API. Создан исключительно для практики знаний в  фрэймворке Django</p>
+                    <p class="txt-small">Небольшой сайт с возможностью регистрации, публикации контента, выставлением никнеймов, чтением глобальной ленты, а так же имеет в себе API. Создан исключительно для практики знаний в  фрэймворке Django.</p>
                 </div>
             </div>
         </div>
