--- a/eng.html
+++ b/eng.html
@@ -9,7 +9,7 @@
 	<body>
         <div class="container">
             <div class="row">
-                <div class="col p-3 mb-2 bg-gray">
+                <div class="col p-3 mb-2 bg-gray col-sm-3">
                     <br/>
                     <p class="txt-gray txt-big">Anton Sobolev<sup class="sup-thin"><a href="https://deadanddiefox.github.io" class="sup-decor">RU</a></sup></p>
                     
@@ -28,7 +28,7 @@
                     <p class="text-bold-normal">hh.ru
                     <br/><a href="https://hh.ru/resume/76f65f38ff08a3876a0039ed1f704f7a5a4c66" class="link-thin">Перейти</a></p>
                 </div>
-                <div class="col">
+                <div class="col col-sm-8">
                     <br/>
                     <br/>
                     <br/>
@@ -40,7 +40,7 @@
                         <li>Frameworks: Django;</li>
                         <li>Version Control: Git;</li>
                         <li>Databases: SQLite3, PostgreSQL;</li>
-                        <li>Tools: ORM, API, REST, HTML, CSS;</p></li>
+                        <li>Tools: ORM, API, REST, HTML, CSS, Ajax, Unit Testing;</p></li>
                     </ul>
                     <br/>
                     <br/>
