--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
         <div class="container">
             <div class="row">
-                <div class="col p-3 bg-gray">
+                <div class="col p-3 bg-gray col-sm-3">
                     <br/>
                     <p class="txt-gray txt-big">Антон Соболев<sup class="sup-thin"><a href="https://deadanddiefox.github.io/eng" class="sup-decor">EN</a></sup></p>
                     
@@ -28,7 +28,7 @@
                     <p class="text-bold-normal">hh.ru
                     <br/><a href="https://hh.ru/resume/76f65f38ff08a3876a0039ed1f704f7a5a4c66" class="link-thin">Перейти</a></p>
                 </div>
-                <div class="col">
+                <div class="col col-sm-8">
                     <br/>
                     <br/>
                     <br/>
@@ -40,7 +40,7 @@
                         <li>Фрэймворки: Django;</li>
                         <li>Контроль Версий: Git;</li>
                         <li>Базы Данных: SQLite3, PostgreSQL;</li>
-                        <li>Интрументы: ORM, API, REST, HTML, CSS;</p></li>
+                        <li>Интрументы: ORM, API, REST, HTML, CSS, Ajax, Unit Testing;</p></li>
                     </ul>
                     <br/>
                     <br/>
