--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <li>Фрэймворки: Django;</li>
                         <li>Контроль Версий: Git;</li>
                         <li>Базы Данных: SQLite3, PostgreSQL;</li>
-                        <li>Интрументы: ORM, API, REST, HTML, CSS, Ajax, Unit Testing;</p></li>
+                        <li>Инструменты: ORM, API, REST, HTML, CSS, Ajax, Unit Testing;</p></li>
                     </ul>
                     <br/>
                     <br/>
