--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
                     <p>Прототип Социальной Сети</p>
                     <p class="txt-small">Небольшой сайт с возможностью регистрации, публикации контента, выставлением никнеймов, чтением глобальной ленты, а так же имеет в себе API. Создан исключительно для практики знаний в  фрэймворке Django.</p>
                     <br/>
+                    
+                    <p>Имиджборд</p>
+                    <p class="txt-small">Полная реализации одной из разновидностей веб-форумов.</p>
+                    <br/>
                 </div>
             </div>
         </div>
