--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
                     <p>Имиджборд</p>
                     <p class="txt-small">Полная реализации одной из разновидностей веб-форумов.</p>
                     <br/>
+                    
+                    <p class="txt-small">Исходный код и прочие материалы будут показаны на собеседование.</p>
+                    <br/>
                 </div>
             </div>
         </div>
