--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <hr class="line-black">
                     <br/>
                     
-                    <p class="txt-small">Я бэкэнд-разработчик Python с опытом создания Web-Приложений. Заинтересован в полном изучении фронтэнд разработки и переквалификации в фуллстэк разработчика.</p>
+                    <p class="txt-small">Я бэкэнд-разработчик Python с опытом создания Web-Приложений. Заинтересован в полном изучении фронтэнд разработки и повышение квалификации в фуллстэк разработчика.</p>
                     <br/>
                 </div>
                 <div class="col col-sm-8">
