--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                     <br/>
                     
                     <p class="txt-small">Я бэкэнд-разработчик Python с опытом создания Web-Приложений. Заинтересован в полном изучении фронтэнд разработки и повышение квалификации в фуллстэк разработчика.</p>
+                    <a href="https://deadanddiefox.github.io/CV_Sobolev.pdf" class="link-thin">Скачать резюме в PDF формате</a>
                     <br/>
                 </div>
                 <div class="col col-sm-8">
