--- a/eng.html
+++ b/eng.html
@@ -39,6 +39,7 @@
                     <br/>
                     
                     <p class="txt-small">I am a Python backend developer with experience in building Web Applications. Interested in fully studying frontend development and retraining to a full stack developer.</p>
+                    <a href="https://deadanddiefox.github.io/CV_Sobolev.pdf" class="link-thin">PDF resume format</a>
                     <br/>
                 </div>
                 <div class="col col-sm-8">
