--- a/eng.html
+++ b/eng.html
@@ -29,7 +29,7 @@
                     <br/><a href="https://hh.ru/resume/76f65f38ff08a3876a0039ed1f704f7a5a4c66" class="link-thin">Go to</a></p>
                     
                     <p class="text-bold-normal">Mail
-                    <br/><a href="mailto:anton.soboleww@yandex.ru" class="link-thin">anton.soboleww@yandex.ru</a></p>
+                    <br/><a href="mailto:anton.soboleww@yandex.ru" class="link-thin">anton.soboleww@ya.ru</a></p>
                     <br/>
                     <br/>
                     <br/>
