--- a/eng.html
+++ b/eng.html
@@ -82,7 +82,7 @@
                     </ul>
                     <br/>
                     
-                    <p class="txt-small">Source code and other materials will be shown for interview.</p>
+                    <p class="txt-small">Source code and other materials will be submitted for interview.</p>
                     <br/>
                 </div>
             </div>
