--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     </ul>
                     <br/>
                     
-                    <p class="txt-small">Исходный код и прочие материалы будут показаны на собеседование.</p>
+                    <p class="txt-small">Исходный код и прочие материалы будут представлены на собеседование.</p>
                     <br/>
                 </div>
             </div>
