--- a/eng.html
+++ b/eng.html
@@ -38,7 +38,7 @@
                     <hr class="line-black">
                     <br/>
                     
-                    <p class="txt-small">I am a Python backend developer with experience in building Web Applications. Interested in fully studying frontend development and retraining to a full stack developer.</p>
+                    <p class="txt-small">I am a Python backend-developer with experience in building Web Applications. Interested in fully studying frontend development and retraining to a fullstack-developer.</p>
                     <a href="https://deadanddiefox.github.io/CV_Sobolev.pdf" class="link-thin">PDF resume format</a>
                     <br/>
                 </div>
