--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <hr class="line-black">
                     <br/>
                     
-                    <p class="txt-small">Я бэкэнд-разработчик Python с опытом создания Web-Приложений. Заинтересован в полном изучении фронтэнд разработки и повышение квалификации в фуллстэк разработчика.</p>
+                    <p class="txt-small">Я backend-разработчик Python с опытом создания Web-приложений. Заинтересован в полном изучении frontend разработки и повышение квалификации в fullstack-разработчика.</p>
                     <a href="https://deadanddiefox.github.io/CV_Sobolev.pdf" class="link-thin">PDF формат резюме</a>
                     <br/>
                 </div>
@@ -51,13 +51,13 @@
                     
                     <ul>
                         <p><li>Основные языки: Python;</li>
-                        <li>Фрэймворки: Django;</li>
+                        <li>Framework: Django;</li>
                         <li>Python библиотеки: AsyncIO, Unittest NumPy;</li>
                         <li>Контроль версий: Git;</li>
                         <li>Базы данных: SQLite3, PostgreSQL;</li>
                         <li>Операционные системы: Windows, Linux Ubuntu;</li>
                         <li>Развёртывание: Docker;</li>
-                        <li>Фронтэнд: JS, Bootstrap;</li>
+                        <li>Frontend: JS, Bootstrap;</li>
                         <li>Инструменты: ORM, API, REST, HTML, CSS, Ajax;</p></li>
                     </ul>
                     <br/>
