--- a/eng.html
+++ b/eng.html
@@ -49,7 +49,7 @@
                     <hr class="line-black">
                     
                     <ul>
-                        <p><li>Programming languages: Python;</li>
+                        <p><li>Programming language: Python;</li>
                         <li>Frameworks: Django;</li>
                         <li>Version control: Git;</li>
                         <li>Python libraries: AsyncIO, Unittest NumPy;</li>
