--- a/eng.html
+++ b/eng.html
@@ -52,7 +52,7 @@
                         <p><li>Programming language: Python;</li>
                         <li>Frameworks: Django;</li>
                         <li>Version control: Git;</li>
-                        <li>Python libraries: AsyncIO, Unittest NumPy;</li>
+                        <li>Python libraries: AsyncIO, Unittest, NumPy;</li>
                         <li>Databases: SQLite3, PostgreSQL;</li>
                         <li>Operating systems: Windows Linux Ubuntu;</li>
                         <li>Deployment: Docker;</li>
