--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <hr class="line-black">
                     
                     <ul>
-                        <p><li>Основной язык: Python;</li>
+                        <p><h6>Частная практика / Фриланс</h6>
                         <li>Framework: Django;</li>
                         <li>Python библиотеки: AsyncIO, Unittest, NumPy;</li>
                         <li>Контроль версий: Git;</li>
