--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <hr class="line-black">
                     <br/>
                     
-                    <p class="txt-small">Я backend-разработчик Python с опытом создания Web-приложений. Заинтересован в полном изучении frontend разработки и повышение квалификации в fullstack-разработчика.</p>
+                    <p class="txt-small">Я backend-разработчик Python с опытом создания Web-приложений. Заинтересован в полном изучении frontend разработки и повышение квалификации до fullstack-разработчика.</p>
                     <a href="https://deadanddiefox.github.io/CV_Sobolev.pdf" class="link-thin">PDF формат резюме</a>
                     <br/>
                 </div>
