--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
                     <hr class="line-black">
                     <br/>
                     
-                    <p class="txt-small">Я backend-разработчик Python с опытом создания Web-приложений. Заинтересован в полном изучении frontend разработки и повышение квалификации до fullstack-разработчика.</p>
+                    <p class="txt-small">Привет! Я backend-разработчик Python с коммерческим опытом разработки Web-приложений. 
+			    	Люблю не ломать прод и покрывать тестами любой функционал.
+		    		Особый интерес испытываю к работе с/интеграции API в продукты, либо его разработке.
+		    		А так же в обучении и моделировании нейронных сетей. Открыт к предложениям.</p>
                     <a href="https://deadanddiefox.github.io/CV_Sobolev.pdf" class="link-thin">PDF формат резюме</a>
                     <br/>
                 </div>
