--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <div class="row">
                 <div class="col p-3 bg-gray col-sm-3">
                     <br/>
-                    <p class="txt-gray txt-big">Антон Соболев<sup class="sup-thin"><a href="https://deadanddiefox.github.io/eng" class="sup-decor">EN</a></sup></p>
+                    <p class="txt-gray txt-big">Антон Соболев<sup class="sup-thin"><!--<a href="https://deadanddiefox.github.io/eng" class="sup-decor">EN</a></sup>--></p>
                     <a href="mailto:anton.soboleww@yandex.ru" class="link-thin-small">anton.soboleww@ya.ru</a></p>
                     
                     <br/>
