неудачная попытка переноса тоже убрана

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <p class="txt-small">Привет! Я backend-разработчик Python с коммерческим опытом разработки Web-приложений. 
 			    	Люблю не ломать прод и покрывать тестами любой функционал.
 		    		Особый интерес испытываю к работе с API других продуктов, либо его разработке.
-		    		А так же к обучению и моделированию нейронных сетей. \nОткрыт к предложениям.</p>
+		    		А так же к обучению и моделированию нейронных сетей. Открыт к предложениям.</p>
                     <a href="https://deadanddiefox.github.io/CV_Sobolev.pdf" class="link-thin">PDF формат резюме</a>
                     <br/>
                 </div>
